octal dodel formy

--- a/index.html
+++ b/index.html
@@ -122,12 +122,15 @@
                 <h2 class="title-chemzan">Чем мы занимаемся</h2>
             <ul class="chemzan-list list">
                 <li class="chemzan-item">
+                    <h3 class="text-about">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
                     <img class="chemzan-img" src="./chem-zan/img1.jpg" alt="Photo1" width="370" />
                 </li>
                 <li class="chemzan-item">
+                    <h3 class="text-about">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
                     <img class="chemzan-img" src="./chem-zan/img2.jpg" alt="Photo2" width="370" />
                 </li>
                 <li class="chemzan-item">
+                    <h3 class="text-about">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
                     <img class="chemzan-img" src="./chem-zan/img3.jpg" alt="Photo3" width="370" />
                 </li>
             </ul>
