--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <!-- HERO -->
         <section class="hero container">
             <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
-           <button class="modal-btn ">Заказать услугу</button> 
+           <button class="modal-btn" data-modal-open >Заказать услугу</button> 
         </section>
 
                                 <!-- OSOBENOSTI -->
@@ -409,6 +409,17 @@
             </div>
         </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal >
+        <div class="modal">
+            <button type="button" class="modal-close-but" data-modal-close >
+                <svg class="close-icon">
+                    <use href="./images/sprite.svg#icon-close-black"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+<script src="./js/modal.js"></script>
 </body>
 
 </html>
