--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                         <a class="navigation-link link" href="">Студия</a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
+                        <a class="navigation-link foc link" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="navigation-item">
                         <a class="navigation-link link" href="">Контакты</a>
