--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                 <a class="logo link" href="./">Web<span class="logo-head">Studio</span></a>
                 <ul class="navigation-list list">
                     <li class="navigation-item">
-                        <a class="navigation-link link" href="">Студия</a>
+                        <a class="navigation-link link" href="./">Студия</a>
                     </li>
                     <li class="navigation-item">
                         <a class="navigation-link foc link" href="./portfolio.html">Портфолио</a>
