--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                         <a class="logo link" href="./">Web<span class="logo-fut">Studio</span></a>
                 <ul class="footer-list list">
                     <li class="footer-elements">
-                        <p class="footer-adress">г. Киев, пр-т Леси Украинки, 2</p>
+                        <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
                     </li>
                      <li class="footer-elements">
                         <a class="footer-comun link" href="">+38 099 111 11 11</a>
@@ -407,6 +407,21 @@
                     </li>
                 </ul>
             </div>
+            <div class="fut-form-blok">
+                <p class="hed-fut-form">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+                <form action="#" class="fut-form" autocomplete="off">
+                    <label class="fut-form-field">
+                        <span class="fut-form-input-wrapper">
+                            <input type="email" name="user-email" class="fut-form-input" placeholder="E-mail" required>
+                        </span>
+                    </label>
+                    <button type="submit" class="fut-form-btn">Подписаться
+                    <svg width="24" height="24" class="fut-form-icon">
+                        <use href="./images/sprite.svg#icon-icon-send"></use>
+                    </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 <!--  -->
@@ -417,14 +432,13 @@
                     <use href="./images/sprite.svg#icon-close-black"></use>
                 </svg>
             </button>
-                   
                 <form action="#" class="modal-form" autocomplete="off">
                     <b class="form-head">Оставьте свои данные, мы вам перезвоним</b>
                     <label class="modal-form-field">
                         Имя
                         <span class="modal-form-input-wrapper">
-                            <input type="text" name="user-name" class="modal-form-input" required minlength="2">
-                            <svg class="modal-form-icon">
+                            <input type="text" name="user-name" class="modal-form-input" required minlength="2" >
+                            <svg width="12" height="12" class="modal-form-icon">
                                 <use href="./images/sprite.svg#icon-name"></use>
                             </svg>
                         </span>
@@ -434,7 +448,7 @@
                         <span class="modal-form-input-wrapper">
                             <input type="tel" name="user-phone" class="modal-form-input" required
                                 pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}" title="0934567890">
-                            <svg class="modal-form-icon">
+                            <svg width="13" height="13" class="modal-form-icon">
                                 <use href="./images/sprite.svg#icon-phone"></use>
                             </svg>
                         </span>
@@ -443,7 +457,7 @@
                         Почта
                         <span class="modal-form-input-wrapper">
                             <input type="email" name="user-email" class="modal-form-input" required >
-                            <svg class="modal-form-icon">
+                            <svg width="15" height="12" class="modal-form-icon">
                                 <use href="./images/sprite.svg#icon-email"></use>
                             </svg>
                         </span>
