--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
                 <a class="logo link" href="./">Web<span class="logo-fut">Studio</span></a>
                 <ul class="footer-list list">
                     <li class="footer-elements">
-                        <p class="footer-adress">г. Киев, пр-т Леси Украинки, 2</p>
+                        <p class="footer-adress">г. Киев, пр-т Леси Украинки, 26</p>
                     </li>
                     <li class="footer-elements">
                         <a class="footer-comun link" href="">+38 099 111 11 11</a>
@@ -271,6 +271,21 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="fut-form-blok">
+                <p class="hed-fut-form">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+                <form action="#" class="fut-form" autocomplete="off">
+                    <label class="fut-form-field">
+                        <span class="fut-form-input-wrapper">
+                            <input type="email" name="user-email" class="fut-form-input" placeholder="E-mail" required>
+                        </span>
+                    </label>
+                    <button type="submit" class="fut-form-btn">Подписаться
+                        <svg width="24" height="24" class="fut-form-icon">
+                            <use href="./images/sprite.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
